# ai-coding-prompts

./: .gitignore  20_stub_out_project.txt  2504__create-project-summary.md  2505__bootstrap-custom-roo-code-mode.md  2505__coding_preferences.md  2508__Comprehensive_Documentation_Generation_for_a_Software_Project.md  2508__initial_shopware_plugin_documentation.md  2508__update_shopware_plugin_documentation_and_changelog.md  README.md  good-bad-ugly.txt  milestone-dependency-graph.mermaid  prompt-for-claude.txt  prompts  schema-definition-instructions.md  schema-definition-phase.md  snippets-cm.md  snippets.md  snippets_laptop.md
.ruler/: AGENTS.md  ruler.toml
TRASH/: OLD_snippets-cm.md  OLD_snippets.md  good-bad-ugly.txt
adapters/: README.md
ai-plans/: 251208__PLAN__add-windsurf-workflows-directory.md
bootstrap-software-app/: 15_AI-Centric-Milestone-Planning.md  20_PrdGenerator.md  README.md  api-contract-template.md
cli/: convert_skills.py  pyproject.toml
cli/prompts_cli/: __init__.py  cli.py  config.py
cli/prompts_cli/commands/: skill_cmd.py  sync_cmd.py  workflow_cmd.py
cli/prompts_cli/utils/: file_ops.py
conventions/: CONVENTIONS-DATABASE.md  CONVENTIONS-PHP.md  CONVENTIONS-PYTHON.md  CONVENTIONS-SH.md  CONVENTIONS-SHADCNUI-TAILWIND-V4.md  CONVENTIONS-SW6-PLUGIN.md  CONVENTIONS-SW66.md  CONVENTIONS-VUE.md  CONVENTIONS_SH.md  DOC_STYLE_GUIDE.md  conventions-bash.md  conventions-golang.md  conventions-php.md  conventions-sw6-plugin.md  doc-style-guide.md
global-workflows/: add-comments-bash.md  add-comments-twig.md  add-comments-vue.md  pr-review.md  (+15 more)
(+546 files in other folders)
