[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompts-cli"
version = "0.1.0"
description = "Management CLI for ai-coding-prompts repository"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
]

[project.scripts]
prompts = "prompts_cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]

[tool.mypy]
strict = true

[tool.black]
line-length = 88
